# monoclaw

./: .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  pyproject.toml
src/: agent.py  channels.py  config.py  context.py  llm.py  main.py  mcp_client.py  memory.py  memory_store.py  models.py  reviewer.py  scheduler.py  tools.py
